# Chess

Chess/: CMakeLists.txt  Perft.cpp  main.cpp
Chess/Board/: Bitboard.cpp  Bitboard.h  Board.cpp  Board.h  BoardTest.cpp  BoardTest.h  Square.cpp  Square.h
Chess/Move/: Move.cpp  Move.h  SlidingPieceAttacks.cpp  SlidingPieceAttacks.h
Chess/Pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
Chess/Players/: Bot.cpp  Bot.h  Human.cpp  Human.h  Player.h
